<resources>
    <string name="app_name">PHRM</string>
    <string name="facebook_app_id">384558705309331</string>
    <string name="fb_login_protocol_scheme">fb384558705309331</string>
    <string name="language_settings">Language</string>
    <string name="welcome_text">welcome</string>
    <string name="nutrition_plan" />
    <string name="change_password">Change password</string>
    <string name="settings_title">Settings</string>
    <string name="home_title">Home</string>
    <string name="health_plan">Health Plan</string>
    <string name="test_record">Test Record</string>
    <string name="bottom_nev_home">Home</string>
    <string name="bottom_nev_notification">Reminder</string>
    <string name="bottom_nev_reports">Reports</string>
    <string name="menu_log_out">Log Out</string>
    <string name="nutration_plan_title">Nutrition plan</string>
    <string name="add_meal_button">Add Meal</string>
    <string name="meal_reminder">Meal Reminder</string>
    <string name="reminders_to_have_your_meal">Reminders to have your meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="_meal_reminder">Set time</string>
    <string name="create_medication_plan_title">Set Medication Plan</string>
    <string name="creat_plan_medication">Add to Medication Plan</string>
    <string name="click_icon_to_set_time_medication">Click icon to set time</string>
    <string name="medicines_information">Medicines information:</string>
    <string name="medicines_information_here">Medicines information here</string>
    <string name="repeat_medication_alerm">Repeat:</string>
    <string name="today_medication_alerm">Today</string>
    <string name="everyday_medication_alerm">Everyday</string>
    <string name="custom_medication_alerm">Custom</string>
    <string name="no_medication_plan_created">No medication plan created</string>
    <string name="medication_plan_title">Medication plan</string>
    <string-array name="settings_item">
        <item>Change Password</item>
        <item>Language</item>
    </string-array>
    <string-array name="grid_daily_routine">
        <item>Nutrition</item>
        <item>Exercise</item>
        <item>Medication</item>
    </string-array>
    <string-array name="grid_test_record">
        <item>Blood Pressure</item>
        <item>Glucose</item>
        <item>More Items</item>
    </string-array>
    <string-array name="grid_daily_routine_button">
        <item>Manage</item>
        <item>Update</item>
    </string-array>
    <string-array name="grid_test_record_button">
        <item>Update</item>
        <item>Update</item>
        <item>Update</item>
    </string-array>
    <string-array name="nutrition_items">
        <item>Calorie</item>
        <item>Carbohydrate</item>
        <item>Fat</item>
        <item>Protein</item>
    </string-array>
    <string-array name="gained_and_necessary_nutrition">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string-array name="bn_food_search">
        <item>Rice</item>
        <item>Mango</item>
        <item>Banana</item>
        <item>Apple</item>
        <item>Grapes</item>
        <item>Jackfruit</item>
        <item>Litchi</item>
        <item>Pineapple</item>
        <item>Guava</item>
        <item>Watermelon</item>
        <item>Beans</item>
        <item>Tomato</item>
        <item>Beet</item>
        <item>Radish</item>
        <item>Cauliflower</item>
        <item>Cabbage</item>
        <item>Gourd</item>
        <item>Grass Carp</item>
        <item>Hilsha shad</item>
        <item>Salmon</item>
        <item>catfish</item>
        <item>Tilapia</item>
        <item>Chicken</item>
        <item>Beef</item>
        <item>Duck</item>
        <item>Goat</item>
        <item>milk</item>
        <item>Egg</item>

    </string-array>
    <string-array name="food_search">
        <item>Rice</item>
        <item>Mango</item>
        <item>Banana</item>
        <item>Apple</item>
        <item>Grapes</item>
        <item>Jackfruit</item>
        <item>Litchi</item>
        <item>Pineapple</item>
        <item>Guava</item>
        <item>Watermelon</item>
        <item>Beans</item>
        <item>Tomato</item>
        <item>Beet</item>
        <item>Radish</item>
        <item>Cauliflower</item>
        <item>Cabbage</item>
        <item>Gourd</item>
        <item>Grass Carp</item>
        <item>Hilsha shad</item>
        <item>Salmon</item>
        <item>catfish</item>
        <item>Tilapia</item>
        <item>Chicken</item>
        <item>Beef</item>
        <item>Duck</item>
        <item>Goat</item>
        <item>milk</item>
        <item>Egg</item>

    </string-array>
    <string-array name="exercise_list">
        <item>Walking(Slow 2.5mph)</item>
        <item>Walking(Medium 3mph)</item>
        <item>Walking(Fast 3.5-4mph)</item>
        <item>Jogging(General)</item>
        <item>Jogging(In Place)</item>
        <item>Running(Slow)</item>
        <item>Running(Medium)</item>
        <item>Running(Medium Fast)</item>
        <item>Running(Fast)</item>
        <item>Bicycling(Slow)</item>
        <item>Bicycling(Medium Fast)</item>
        <item>Bicycling(Fast)</item>
        <item>Swimming(Backstroke, general)</item>
        <item>Swimming(Breaststroke, general)</item>
        <item>Swimming(Butterfly, general)</item>
        <item>Rope jumping(Slow pace)</item>
        <item>Rope jumping(Moderate pace)</item>
        <item>Rope jumping(Fast pace)</item>
        <item>push ups/sit ups/pull-ups(Moderate)</item>
        <item>push ups/sit ups/pull-ups(Vigorous)</item>
        <item>yoga, Hatha</item>
        <item>yoga, Power</item>
        <item>yoga, Nadisodhana</item>
    </string-array>
    <string-array name="exercise_met">
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>7.0</item>
        <item>8.0</item>
        <item>8.5</item>
        <item>11.0</item>
        <item>13.0</item>
        <item>14.0</item>
        <item>6.0</item>
        <item>8.0</item>
        <item>10.0</item>
        <item>8.0</item>
        <item>10.0</item>
        <item>11.0</item>
        <item>8.8</item>
        <item>11.8</item>
        <item>12.3</item>
        <item>3.8</item>
        <item>8.0</item>
        <item>2.5</item>
        <item>4.0</item>
        <item>2.0</item>

    </string-array>
    <string-array name="days_of_weak">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="exercise_duration">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>45 minutes</item>
        <item>50 minutes</item>
        <item>60 minutes</item>
        <item>75 minutes</item>
        <item>90 minutes</item>

    </string-array>
    <string-array name="test_list">
        <item>Serum Creatinine Test</item>
        <item>Bilirubin Blood Test</item>
        <item>Complete Cholesterol Test (Lipid Panel / Lipid Profile)</item>
        <item>ALT / SGPT (Blood)</item>
        <item>AST / SGOT</item>
        <item>Uric acid test</item>
        <item>ESR</item>
        <item>Urine Routine Examination</item>
    </string-array>
    <string name="test_serum_purpose">
        A creatinine blood test measures the level of creatinine in the blood.It helps to determine kidney diseases and provides doctor with information about how the kidneys are working.
    </string>
    <string name="test_serum_range">
        i.	Male: From 0.7 to 1.3 mg/dL\nii.	Female: From 0.6 to 1.1 mg/dL
    </string>
    <string name="test_Serum_effect">
        i.	A blocked urinary tract\n
        ii.	A high-protein diet\n
        iii.	Dehydration\n
        iv.	Kidney problems, such as kidney damage or infection\n
        v.	Reduced blood flow to the kidneys due to shock, congestive heart failure, or complications of diabetes\n
    </string>
    <string name="test_bilirubin_purpose">
        Helps to determine the cause of Jaundice, also helps diagnose conditions like liver disease, hemolytic anemia, and blocked bile ducts.
    </string>
    <string name="test_bilirubin_range">
        i.	Direct bilirubin: 0 to 0.4 mg/DL (milligrams per deciliter)\nii.	Total bilirubin: 0.3 to 1.0 mg/DL (milligrams per deciliter)

    </string>
    <string name="test_bilirubin_effect">
        Causes of abnormal bilirubin level: High bilirubin level may be due to,\n
            i.	Jaundice.\n
            ii.	Problems with the liver.\n
            iii.Problems with Bile ducts.\n
            iv.	Problems with Gallbladder.\n

    </string>
    <string name="test_complete_cholesterol_purpose">
        A complete cholesterol test helps doctor to measure the amount of “good” and “bad” cholesterol and triglycerides, a type of fat, in patient’s blood. It helps to determine possibilities of,\n
        i.	Heart disease\n
        ii.	Stroke\n
        iii. Atherosclerosis, a clogging or hardening of your arteries

    </string>
    <string name="test_complete_cholesterol_range">
        i.	LDL (Low-density lipoprotein): 70 to 130 mg/dL (the lower the number, the better)\n
        ii.	HDL (High-density lipoprotein): more than 40 to 60 mg/dL (the higher the number, the better)\n
        iii. total cholesterol: less than 200 mg/dL (the lower the number, the better)\n
        iv.	triglycerides: 10 to 150 mg/dL (the lower the number, the better)\n
    </string>
    <string name="test_alt_sgpt_purpose">
        The ALT or SGPT test is usually used to determine whether the patient has liver injury or failure.
    </string>
    <string name="test_alt_sgpt_range">
        Normal value of ALT test: The normal value for ALT in blood is between 7 and 55 units per liter.

    </string>
    <string name="test_alt_sgpt_effect">
        Higher-than-normal levels of ALT can indicate liver damage. Increased levels of ALT may be a result of:\n
        i.	hepatitis, which is an inflammatory condition of the liver\n
        ii.	cirrhosis, which is severe scarring of the liver\n
        iii.	death of liver tissue\n
        iv.	a tumor or cancer in the liver\n
        v.	a lack of blood flow to the liver\n
        vi.	hemochromatosis, which is a disorder that causes iron to build up in the body\n
        vii.	mononucleosis, which is an infection usually caused by the Epstein-Barr virus\n
        viii.	pancreatitis, which is an inflammation of the pancreas\n


    </string>
    <string name="test_ast_sgot_purpose">
        AST test is commonly performed to check for liver diseases, such as hepatitis. It’s usually measured together with alanine aminotransferase (ALT). The AST-to-ALT ratio can help your doctor diagnose liver disease. This ratio can determine if there’s been damage to your liver as opposed to damage to your heart or muscles.
    </string>
    <string name="test_ast_sgot_range">
        Typically the range for normal AST is reported between 10 to 40 units per liter.\n
    </string>
    <string name="test_uric_acid_purpose">
        A uric acid blood test, also known as a serum uric acid measurement, determines how much uric acid is present in your blood. The test can help determine how well your body produces and removes uric acid.
    </string>
    <string name="test_uric_acid_range">
        Uric acid levels can vary based on sex. Normal values for women are 2.5 to 7.5 milligrams/deciliter (mg/dL) and for men 4.0 to 8.5 mg/dL. However, the values may vary based on the lab doing the testing.

    </string>
</resources>